forEnersys/DavePkg/objects/RP_Approval__c.object
<CustomObject>
    <description>Lookup table for Reserve Power approvals.  LOB is considered first and then the Item Group is looked up based on the LOB.</description>
    <fields>
        <fullName>In_Range_or_Other__c</fullName>
        <label>In Range or Other</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Group_Maximum__c</fullName>
        <label>Item Group Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Group_Minimum__c</fullName>
        <label>Item Group Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOB_Descripton__c</fullName>
        <formula>LOB__r.LOB_Description_formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB Descripton</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Number__c</fullName>
        <formula>LOB__r.LOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOB</label>
        <referenceTo>LOB__c</referenceTo>
        <relationshipLabel>RP Approval Matrix</relationshipLabel>
        <relationshipName>RP_Approval_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_1_Approval__c</fullName>
        <label>Level 1 Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_2_Approval__c</fullName>
        <label>Level 2 Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3_Approval__c</fullName>
        <label>Level 3 Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>RP Approval Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>In_Range_or_Other__c</columns>
        <columns>Item_Group_Maximum__c</columns>
        <columns>Item_Group_Minimum__c</columns>
        <columns>Level_1_Approval__c</columns>
        <columns>Level_2_Approval__c</columns>
        <columns>Level_3_Approval__c</columns>
        <columns>LOB__c</columns>
        <columns>LOB_Descripton__c</columns>
        <columns>LOB_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RPA-{0000}</displayFormat>
        <label>RP Approval  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RP Approval Matrix</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>